# seven

./: .editorconfig  CHANGELOG.md  README.md  cabal.project  seven.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/cat/: cat.cabal
src/cat/app/: Main.hs
src/cat/golden-test/: missing-file.goldplate  multiple-files.goldplate  multiple-files.stdout  no-argument.goldplate  number-nonblank.goldplate  number-nonblank.stdout  number.goldplate  number.stdout  show-all-and-number.goldplate  show-all-and-number.stdout  show-all.goldplate  show-all.stdout  show-ends.goldplate  show-ends.stdout  show-nonprinting.goldplate  show-nonprinting.stdout  show-tabs.goldplate  show-tabs.stdout  squeeze-blank.goldplate  squeeze-blank.stdout
src/cat/src/Seven/: Cat.hs
src/nl/: nl.cabal
src/nl/app/: Main.hs
src/nl/golden-test/: body-numbering-all.goldplate  body-numbering-all.stdout  body-numbering-none.goldplate  body-numbering-none.stdout  body-numbering-nonempty.goldplate  body-numbering-nonempty.stdout  body-numbering-regex.goldplate  body-numbering-regex.stdout  footer-numbering-all.goldplate  footer-numbering-all.stdout  footer-numbering-none.goldplate  footer-numbering-none.stdout  footer-numbering-nonempty.goldplate  footer-numbering-nonempty.stdout  footer-numbering-regex.goldplate  footer-numbering-regex.stdout  header-numbering-all.goldplate  header-numbering-all.stdout  header-numbering-none.goldplate  header-numbering-none.stdout  header-numbering-nonempty.goldplate  header-numbering-nonempty.stdout  header-numbering-regex.goldplate  header-numbering-regex.stdout  join-blank-lines.goldplate  join-blank-lines.stdout  line-increment.goldplate  line-increment.stdout  missing-file.goldplate  multiple-files.goldplate  multiple-files.stdout  no-argument.goldplate  no-argument.stdout  no-renumber.goldplate  no-renumber.stdout  number-format-ln.goldplate  number-format-ln.stdout  number-format-rn.goldplate  number-format-rz.goldplate  number-format-rz.stdout  (+12 more)
src/nl/golden-test/files/: a.txt  b.txt
src/nl/src/Seven/: Nl.hs
src/tac/: tac.cabal
src/tac/app/: Main.hs
src/tac/golden-test/: before.goldplate  before.stdout  missing-file.goldplate  multiple-arguments.goldplate  multiple-arguments.stdout  no-argument.goldplate  no-argument.stdout  regex-separator.goldplate  regex-separator.stdout  separator.goldplate  separator.stdout
src/tac/golden-test/files/: bar.txt  foo.txt
src/tac/src/Seven/: Tac.hs
